--- a/AudioBase/AudioBase.csproj
+++ b/AudioBase/AudioBase.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D05D9064-C9F0-4143-A26A-ACED0759F7DD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AudioBase</RootNamespace>
-    <AssemblyName>AudioBase</AssemblyName>
+    <RootNamespace>HouseAudio.AudioBase</RootNamespace>
+    <AssemblyName>HouseAudio.AudioBase</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IAmplifier.cs" />
-    <Compile Include="IControlAmplifier.cs" />
     <Compile Include="Input.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Zone.cs" />
