--- a/AudioController/Web.config
+++ b/AudioController/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-AudioController-20121029224650;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-AudioController-20121029224650.mdf" />
+    <add name="AE6MCContext" connectionString="Data Source=|DataDirectory|AE6MC.sdf" providerName="System.Data.SqlServerCe.4.0"/>
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
