--- a/AudioController/Web.config
+++ b/AudioController/Web.config
@@ -21,6 +21,25 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="COMport" value="COM3" />
+
+    <add key="Input.FriendlyName.1" value="Input 1" />
+    <add key="Input.FriendlyName.2" value="Input 2" />
+    <add key="Input.FriendlyName.3" value="Input 3" />
+    <add key="Input.FriendlyName.4" value="Input 4" />
+    <add key="Input.FriendlyName.5" value="Input 5" />
+    <add key="Input.FriendlyName.6" value="Input 6" />
+    <add key="Input.FriendlyName.7" value="Input 7" />
+
+    <add key="Input.Order" value="1,2,3,4,5,6,7" />
+
+    <add key="Zone.FriendlyName.1" value="Zone 1" />
+    <add key="Zone.FriendlyName.2" value="Zone 2" />
+    <add key="Zone.FriendlyName.3" value="Zone 3" />
+    <add key="Zone.FriendlyName.4" value="Zone 4" />
+    <add key="Zone.FriendlyName.5" value="Zone 5" />
+    <add key="Zone.FriendlyName.6" value="Zone 6" />
+
+    <add key="Zone.Order" value="1,2,3,4,5,6" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
