Fixing the Web API.

--- a/AudioController/AudioController.csproj
+++ b/AudioController/AudioController.csproj
@@ -136,9 +136,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AmplifierController.cs" />
     <Compile Include="Filters\NotImplExceptionFilterAttribute.cs" />
-    <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ZoneController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
